--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="dash"> <span>&mdash; </span><span>&mdash; </span><span>&mdash;</span></div>
         </div>
         <p class="menu-paragraf">menu</p>
-        <nav class="disp-n disp-b" id="nav-menu"><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a><a class="nav-menu__item menu-paragraf" href="#">link</a></nav>
+        <nav class="disp-n disp-b" id="nav-menu"><a class="nav-menu__item menu-paragraf" href="#">СОЗДАНИЕ САЙТОВ</a><a class="nav-menu__item menu-paragraf" href="#">ДИЗАЙН</a><a class="nav-menu__item menu-paragraf" href="#">SEO</a><a class="nav-menu__item menu-paragraf" href="#">E-MAIL МАРКЕТИНГ</a><a class="nav-menu__item menu-paragraf" href="#">КОНТЕКСТНАЯ РЕКЛАМА</a><a class="nav-menu__item menu-paragraf" href="#">SMM</a><a class="nav-menu__item menu-paragraf" href="#">О НАС</a><a class="nav-menu__item menu-paragraf" href="#">КОНТАКТЫ</a><a class="nav-menu__item menu-paragraf" href="#">БЛОГ</a></nav>
       </div>
       <div class="header__top-content">
         <div class="logo"><img class="img-fluid" src="img/icons/logo.png" alt="logo"></div>
@@ -36,7 +36,7 @@
         <h1 class="header-title ta-right">Marketing<span class="align-right">place</span><span class="text-vertical">веб-студия</span></h1>
       </div>
     </header>
-    <div class="block" id="offer">
+    <div id="offer">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-7 p-0">
@@ -56,6 +56,120 @@
         </div>
       </div>
     </div>
+    <section class="section1 d-md-none d-lg-block">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-7 p-0">
+            <div class="section1-img"></div>
+          </div>
+          <div class="col-lg-5 p-0">
+            <div class="section1__content">
+              <div class="section1__content-number"><img class="img-fluid" src="../img/icons/1.png" alt=""></div>
+              <div class="section1__content-text">
+                <p class="paragraf color-green">МЫ не только<br>создаем сайты</p>
+                <p class="paragraf color-white">Мы предоставляем<br>комплексный<br>интернет-маркетинг:<br>от макета визитки,<br>до создания и<br>продвижения<br>сайтов</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section2 d-md-none d-lg-block">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-5 p-0">
+            <div class="section2__content">
+              <div class="section2__content-number"><img class="img-fluid" src="../img/icons/2.png" alt=""></div>
+              <div class="section2__content-text">
+                <p class="paragraf color-green">МЫ ЗНАЕМ,<br>ЧТО будет завтра</p>
+                <p class="paragraf color-white">Мы следим за всеми<br>трендами, фишками<br>интернет-маркетинга</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-7 p-0">
+            <div class="section3-img"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section3 d-md-none d-lg-block">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-7 p-0">
+            <div class="section3-img"></div>
+          </div>
+          <div class="col-lg-5 p-0">
+            <div class="section1__content">
+              <div class="section3__content-number"><img class="img-fluid" src="../img/icons/3.png" alt=""></div>
+              <div class="section1__content-text">
+                <p class="paragraf color-green">МЫ делаем КАЧЕCТВО<br>ДОСТУПНым</p>
+                <p class="paragraf color-white">Мы постоянно <br>совершенствуем<br>свои знания,<br>обучаемся, имеем <br>опыт работы с<br>крупными проектами</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section4 d-md-none d-lg-block">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-5 p-0">
+            <div class="section2__content">
+              <div class="section4__content-number"><img class="img-fluid" src="../img/icons/4.png" alt=""></div>
+              <div class="section2__content-text">
+                <p class="paragraf color-green">МЫ проводим <br>индвидуальную<br>работу с клиентоми</p>
+                <p class="paragraf color-white">Мы изучаем ваш<br>бизнес детально и<br>предлагаем<br>оптимальные<br>варианты для его<br>развития</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-7 p-0">
+            <div class="section4-img"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="service">
+      <div class="service-text design">
+        <h2 class="service-text__title">Дизайн</h2>
+        <h3 class="service-text__description"> мы УМЕЕМ делать красиво</h3>
+      </div>
+      <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
+    </section>
+    <section class="service">
+      <div class="service-text site">
+        <h2 class="service-text__title">создание сайтов</h2>
+        <h3 class="service-text__description"> адаптивно, лакончино и просто</h3>
+      </div>
+      <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
+    </section>
+    <section class="service">
+      <div class="service-text marketing">
+        <h2 class="service-text__title">social media marketing</h2>
+        <h3 class="service-text__description"> о вас узнают все и везде</h3>
+      </div>
+      <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
+    </section>
+    <section class="service">
+      <div class="service-text seo">
+        <h2 class="service-text__title">sEO ОПТИМИЗАЦИЯ</h2>
+        <h3 class="service-text__description"> БЫТЬ ПЕРВЫМ В ПОИСКЕ</h3>
+      </div>
+      <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
+    </section>
+    <section class="service">
+      <div class="service-text advert">
+        <h2 class="service-text__title">КОНТЕКСТНАЯ РЕКЛАМА </h2>
+        <h3 class="service-text__description"> Только целевой трафик<br> по минимальной цене</h3>
+      </div>
+      <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
+    </section>
+    <section class="service">
+      <div class="service-text email">
+        <h2 class="service-text__title">E-MAIL МАРКЕТИНГ</h2>
+        <h3 class="service-text__description"> СТИМУЛИРОВАНИЕ КЛИЕНТОВ </h3>
+      </div>
+      <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
+    </section>
     <script src="libs/jquery/jquery-3.0.0.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="libs/parallax.min.js"></script>
