--- a/index.html
+++ b/index.html
@@ -128,42 +128,42 @@
         </div>
       </div>
     </section>
-    <section class="service">
+    <section class="service service-design">
       <div class="service-text design">
         <h2 class="service-text__title">Дизайн</h2>
         <h3 class="service-text__description"> мы УМЕЕМ делать красиво</h3>
       </div>
       <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
     </section>
-    <section class="service">
+    <section class="service service-site">
       <div class="service-text site">
         <h2 class="service-text__title">создание сайтов</h2>
         <h3 class="service-text__description"> адаптивно, лакончино и просто</h3>
       </div>
       <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
     </section>
-    <section class="service">
+    <section class="service service-market">
       <div class="service-text marketing">
         <h2 class="service-text__title">social media marketing</h2>
         <h3 class="service-text__description"> о вас узнают все и везде</h3>
       </div>
       <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
     </section>
-    <section class="service">
+    <section class="service service-opt">
       <div class="service-text seo">
         <h2 class="service-text__title">sEO ОПТИМИЗАЦИЯ</h2>
         <h3 class="service-text__description"> БЫТЬ ПЕРВЫМ В ПОИСКЕ</h3>
       </div>
       <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
     </section>
-    <section class="service">
+    <section class="service service-reklama">
       <div class="service-text advert">
         <h2 class="service-text__title">КОНТЕКСТНАЯ РЕКЛАМА </h2>
         <h3 class="service-text__description"> Только целевой трафик<br> по минимальной цене</h3>
       </div>
       <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
     </section>
-    <section class="service">
+    <section class="service service-email">
       <div class="service-text email">
         <h2 class="service-text__title">E-MAIL МАРКЕТИНГ</h2>
         <h3 class="service-text__description"> СТИМУЛИРОВАНИЕ КЛИЕНТОВ </h3>
