--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Главная</title>
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/animate.css">
     <link rel="stylesheet" href="font/BauhausC/stylesheet.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;amp;subset=cyrillic-ext" rel="stylesheet">
@@ -36,16 +37,17 @@
         <h1 class="header-title ta-right">Marketing<span class="align-right">place</span><span class="text-vertical">веб-студия</span></h1>
       </div>
     </header>
-    <div id="offer">
+    <section class="offer">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-7 p-0">
-            <div class="offer-img"></div>
-          </div>
-          <div class="col-lg-5 p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-7 offer-img"></div>
+          <div class="col-lg-5">
             <div class="offer-content">
               <p>готовы обсудить<br>возможности вашего<br>бизнеса уже сейчас?</p>
-              <form id="offer-form" action="php/mail.php" method="POST">
+              <form class="contact-form" id="form_1" action="php/mail.php" method="POST">
+                <input type="hidden" name="project_name" value="Marketing">
+                <input type="hidden" name="admin_email" value="lareta1@yandex.ru">
+                <input type="hidden" name="form_subject" value="Сообщение с сайта">
                 <input type="text" name="name" id="offer-form__name" placeholder="Name">
                 <input type="text" name="email" id="offer-form__email" placeholder="Email">
                 <button class="btn offer-btn" type="submit">оставить заявку</button>
@@ -55,8 +57,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <section class="section1 d-md-none d-lg-block">
+    </section>
+    <section class="section1 d-none d-lg-block">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-7 p-0">
@@ -74,7 +76,7 @@
         </div>
       </div>
     </section>
-    <section class="section2 d-md-none d-lg-block">
+    <section class="section2 d-none d-lg-block">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-5 p-0">
@@ -92,7 +94,7 @@
         </div>
       </div>
     </section>
-    <section class="section3 d-md-none d-lg-block">
+    <section class="section3 d-none d-lg-block">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-7 p-0">
@@ -110,7 +112,7 @@
         </div>
       </div>
     </section>
-    <section class="section4 d-md-none d-lg-block">
+    <section class="section4 d-none d-lg-block">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-5 p-0">
@@ -124,6 +126,50 @@
           </div>
           <div class="col-lg-7 p-0">
             <div class="section4-img"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mobile-block d-lg-none">
+      <div class="container-fluid">
+        <div class="benefits-block">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="benefits text-right">
+                <div class="benefits-left text-left">
+                  <p class="paragraf color-green">МЫ не только<br>создаем сайты</p>
+                  <p class="paragraf color-white">Мы предоставляем<br>комплексный<br>интернет-маркетинг:<br>от макета визитки,<br>до создания и<br>продвижения<br>сайтов</p>
+                </div>
+                <div class="benefits-img"><img class="img-fluid" src="img/11.png" alt=""></div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="benefits">
+                <div class="benefits-right text-right">
+                  <p class="paragraf color-green">МЫ ЗНАЕМ,<br>ЧТО будет завтра</p>
+                  <p class="paragraf color-white">Мы следим за всеми<br>трендами, фишками<br>интернет-маркетинга</p>
+                </div>
+                <div class="benefits-img"><img class="img-fluid" src="img/22.png" alt=""></div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="benefits text-right">
+                <div class="benefits-left text-left">
+                  <p class="paragraf color-green">МЫ делаем КАЧЕCТВО<br>ДОСТУПНым</p>
+                  <p class="paragraf color-white">Мы постоянно <br>совершенствуем<br>свои знания,<br>обучаемся, имеем <br>опыт работы с<br>крупными проектами</p>
+                </div>
+                <div class="benefits-img"><img class="img-fluid" src="img/33.png" alt=""></div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="benefits">
+                <div class="benefits-right text-right">
+                  <p class="paragraf color-green">МЫ проводим <br>индвидуальную<br>работу с клиентоми</p>
+                  <p class="paragraf color-white">Мы изучаем ваш<br>бизнес детально и<br>предлагаем<br>оптимальные<br>варианты для его<br>развития</p>
+                </div>
+                <div class="benefits-img"><img class="img-fluid" src="img/44.png" alt=""></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -170,10 +216,35 @@
       </div>
       <div class="section-btn"><a class="basic-btn" href="#">УЗНАТЬ БОЛЬШЕ</a></div>
     </section>
+    <section class="our_clients">
+      <div class="container">
+        <h2 class="section-head">наши клиенты</h2>
+        <div class="our_clients-block-mobil">
+          <div class="carousel slide d-inline-block" id="carousel" data-ride="carousel">
+            <!-- Индикаторы-->
+            <ol class="carousel-indicators">
+              <li class="active" data-target="#carousel" data-slide-to="0"></li>
+              <li data-target="#carousel" data-slide-to="1"></li>
+              <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active"><img class="img-fluid" src="img/clients/cl1.png" alt="наши клиенты"></div>
+              <div class="carousel-item"><img class="img-fluid" src="img/clients/cl2.png" alt="наши клиенты"></div>
+              <div class="carousel-item"><img class="img-fluid" src="img/clients/cl3.png" alt="наши клиенты"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="libs/jquery/jquery-3.0.0.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="libs/pagescroll2id/jquery.malihu.PageScroll2id.js"></script>
+    <script src="libs/jquery.validate/jquery.validate.js"></script>
+    <script src="libs/jquery.maskedinput.js"></script>
     <script src="libs/parallax.min.js"></script>
+    <script src="libs/wow.min.js"></script>
     <script src="js/vertical-menu.js"></script>
+    <script src="js/form.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
