--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <section class="our_clients">
       <div class="container">
         <h2 class="section-head">наши клиенты</h2>
-        <div class="our_clients-block-mobil">
+        <div class="our_clients-block-mobil d-sm-none">
           <div class="carousel slide d-inline-block" id="carousel" data-ride="carousel">
             <!-- Индикаторы-->
             <ol class="carousel-indicators">
@@ -231,6 +231,31 @@
               <div class="carousel-item active"><img class="img-fluid" src="img/clients/cl1.png" alt="наши клиенты"></div>
               <div class="carousel-item"><img class="img-fluid" src="img/clients/cl2.png" alt="наши клиенты"></div>
               <div class="carousel-item"><img class="img-fluid" src="img/clients/cl3.png" alt="наши клиенты"></div>
+              <div class="carousel-item"><img class="img-fluid" src="img/clients/cl4.png" alt="наши клиенты"></div>
+              <div class="carousel-item"><img class="img-fluid" src="img/clients/cl5.png" alt="наши клиенты"></div>
+              <div class="carousel-item"><img class="img-fluid" src="img/clients/cl6.png" alt="наши клиенты"></div>
+            </div>
+          </div>
+        </div>
+        <div class="our_clients-block d-xs-none d-sm-block">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="client-item"><img class="img-fluid" src="img/clients/cl1.png" alt="наши клиенты"></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="client-item"><img class="img-fluid" src="img/clients/cl2.png" alt="наши клиенты"></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="client-item"><img class="img-fluid" src="img/clients/cl3.png" alt="наши клиенты"></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="client-item"><img class="img-fluid" src="img/clients/cl4.png" alt="наши клиенты"></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="client-item"><img class="img-fluid" src="img/clients/cl5.png" alt="наши клиенты"></div>
+            </div>
+            <div class="col-sm-4">
+              <div class="client-item"><img class="img-fluid" src="img/clients/cl6.png" alt="наши клиенты"></div>
             </div>
           </div>
         </div>
