--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
               <li class="active" data-target="#carousel" data-slide-to="0"></li>
               <li data-target="#carousel" data-slide-to="1"></li>
               <li data-target="#carousel" data-slide-to="2"></li>
+              <li data-target="#carousel" data-slide-to="3"></li>
+              <li data-target="#carousel" data-slide-to="4"></li>
+              <li data-target="#carousel" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active"><img class="img-fluid" src="img/clients/cl1.png" alt="наши клиенты"></div>
@@ -237,7 +240,7 @@
             </div>
           </div>
         </div>
-        <div class="our_clients-block d-xs-none d-sm-block">
+        <div class="our_clients-block d-none d-sm-block">
           <div class="row">
             <div class="col-sm-4">
               <div class="client-item"><img class="img-fluid" src="img/clients/cl1.png" alt="наши клиенты"></div>
