--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
         <ul class="map-contact">
           <li class="contact-adress">
             <p class="map-contact__title">Адрес</p>
-            <p class="map-contact__text"> г. Череповец, ул. Ленина, 50</p>
+            <p class="map-contact__text"> г.&nbsp;Череповец,&nbsp;ул.&nbsp;Ленина,&nbsp;50</p>
           </li>
           <li class="contact-phone">
             <p class="map-contact__title">телефон</p>
-            <p class="map-contact__text">8 953 512 777 0 </p>
+            <p class="map-contact__text">8&nbsp;953&nbsp;512&nbsp;777&nbsp;0 </p>
           </li>
           <li class="contact-email">
             <p class="map-contact__title">E-MAIL</p>
@@ -305,23 +305,6 @@
       </div>
       <!-- карта с маркерами-->
       <div id="map"></div>
-      <script>
-        function initMap() {
-        //var sokol = {lat: 55.7879405, lng: 37.680486900000005};
-        //var izm = {lat: 55.789556, lng: 37.74765000000002};
-        var center = {lat: 59.124700, lng: 37.928706};
-        var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 16,
-        center: center
-        });
-        
-        var marker = new google.maps.Marker({
-        position: center,
-        map: map,
-        title: "ул. Ленина, 50"
-        });
-        }
-      </script>
       <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvX6LBP5vPcv5WeKT3DurPtnQ1XIA50Ws&amp;callback=initMap"></script>
     </section>
     <script src="libs/jquery/jquery-3.0.0.min.js"></script>
