map-and-contacts2

--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
       <div id="map"></div>
       <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvX6LBP5vPcv5WeKT3DurPtnQ1XIA50Ws&amp;callback=initMap"></script>
     </section>
+    <footer id="footer">
+      <div class="container"></div>
+    </footer>
     <script src="libs/jquery/jquery-3.0.0.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="libs/pagescroll2id/jquery.malihu.PageScroll2id.js"></script>
