--- a/index.html
+++ b/index.html
@@ -305,6 +305,21 @@
       </div>
       <!-- карта с маркерами-->
       <div id="map"></div>
+      <script>
+        function initMap() {    
+        var center = {lat: 59.124700, lng: 37.928706};
+        var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 17,
+        center: center
+        });
+        
+        var marker = new google.maps.Marker({
+        position: center,
+        map: map,
+        title: "ул. Ленина, 50"
+        });
+        }
+      </script>
       <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvX6LBP5vPcv5WeKT3DurPtnQ1XIA50Ws&amp;callback=initMap"></script>
     </section>
     <footer id="footer">
