--- a/thankyou.html
+++ b/thankyou.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;amp;subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   </head>
   <body>
     <div class="page__block">
@@ -15,6 +16,5 @@
       </div>
     </div>
     <script src="libs/jquery/jquery-3.0.0.min.js"></script>
-    <script src="libs/parallax.min.js"></script>
   </body>
 </html>
