--- a/context_adv.html
+++ b/context_adv.html
@@ -111,7 +111,7 @@
           </div>
         </div>
       </section>
-      <section class="dev-team context-dev-team">
+      <section class="dev-team context-dev-team"><img class="img-fluid timeLine-fon21" src="img/fon-items/36.png" alt=""><img class="img-fluid timeLine-fon22" src="img/fon-items/35.png" alt="">
         <h2 class="section-head text-center wow slideInUp" data-wow-duration="2s">Кто будет работать<br>над вашим проектом</h2>
         <div class="container">
           <div class="team-block">
@@ -226,7 +226,7 @@
         </div>
       </div>
     </section>
-    <section class="context-clients text-center">
+    <section class="context-clients text-center"><img class="img-fluid timeLine-fon22" src="img/fon-items/31.png" alt=""><img class="img-fluid timeLine-fon23" src="img/fon-items/32.png" alt=""><img class="img-fluid timeLine-fon21" src="img/fon-items/44.png" alt="">
       <div class="container">
         <h2 class="section-head wow slideInUp" data-wow-duration="1s">наши клиенты</h2>
         <div class="our_clients-block-mobil d-sm-none">
