--- a/smm-service.html
+++ b/smm-service.html
@@ -28,7 +28,7 @@
           <div class="dash"> <span>&mdash; </span><span>&mdash; </span><span>&mdash;</span></div>
         </div>
         <p class="menu-paragraf">меню</p>
-        <nav class="disp-n disp-b" id="nav-menu"><a class="nav-menu__item menu-paragraf" href="creation_sites.html">СОЗДАНИЕ САЙТОВ</a><a class="nav-menu__item menu-paragraf" href="design.html">ДИЗАЙН</a><a class="nav-menu__item menu-paragraf" href="#">SEO</a><a class="nav-menu__item menu-paragraf" href="#">E-MAIL МАРКЕТИНГ</a><a class="nav-menu__item menu-paragraf" href="context_adv.html">КОНТЕКСТНАЯ РЕКЛАМА</a><a class="nav-menu__item menu-paragraf" href="smm-service.html">SMM</a><a class="nav-menu__item menu-paragraf" href="#">О НАС</a><a class="nav-menu__item menu-paragraf" href="#footer">КОНТАКТЫ</a><a class="nav-menu__item menu-paragraf" href="#">БЛОГ</a></nav>
+        <nav class="disp-n disp-b" id="nav-menu"><a class="nav-menu__item menu-paragraf" href="creation_sites.html">СОЗДАНИЕ САЙТОВ</a><a class="nav-menu__item menu-paragraf" href="design.html">ДИЗАЙН</a><a class="nav-menu__item menu-paragraf" href="seoservice.html">SEO</a><a class="nav-menu__item menu-paragraf" href="#">E-MAIL МАРКЕТИНГ</a><a class="nav-menu__item menu-paragraf" href="context_adv.html">КОНТЕКСТНАЯ РЕКЛАМА</a><a class="nav-menu__item menu-paragraf" href="smm-service.html">SMM</a><a class="nav-menu__item menu-paragraf" href="#">О НАС</a><a class="nav-menu__item menu-paragraf" href="#footer">КОНТАКТЫ</a><a class="nav-menu__item menu-paragraf" href="#">БЛОГ</a></nav>
       </div>
       <div class="header__top-content">
         <div class="logo"><a href="index.html"><img class="img-fluid" src="img/icons/logo.png" alt="logo"></a></div>
